# tdlib-rs

./: .gitignore  CHANGELOG.md  COMPILE_TDLIB_WASM32.md  Cargo.toml  Justfile  LICENSE-MIT  Makefile  README.md  RELEASE.md
.github/: dependabot.yml
.github/workflows/: build-tdlib.yml  cd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
tdlib/: Cargo.toml  build.rs
tdlib-rs/: Cargo.toml  build.rs
tdlib-rs-gen/: Cargo.toml
tdlib-rs-gen/src/: enums.rs  functions.rs  lib.rs  metadata.rs  rustifier.rs  types.rs
tdlib-rs-parser/: Cargo.toml
tdlib-rs-parser/src/: errors.rs  lib.rs  tl_iterator.rs
tdlib-rs-parser/src/tl/: category.rs  definition.rs  mod.rs  parameter.rs  ty.rs
tdlib-rs/examples/: get_me.rs  test_ci.rs
tdlib-rs/src/: build.rs  generated.rs  lib.rs  observer.rs  tdjson.rs
tdlib-tl-gen/src/: rustifier.rs
tdlib/examples/: get_me.rs
