[workspace]
members = [
  "tdlib-rs",
  "tdlib-rs-gen",
  "tdlib-rs-parser",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2024"
authors = [
    "Federico Bruzzone <federico.bruzzone.i@gmail.com>",
    "Andrea Longoni",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/FedericoBruzzone/tdlib-rs"
repository = "https://github.com/FedericoBruzzone/tdlib-rs"

[workspace.dependencies]
tdlib-rs-gen = { path = "tdlib-rs-gen" }
tdlib-rs-parser = { path = "tdlib-rs-parser" }
