[package]
name = "tdlib-rs-gen"
version = "1.0.0"
authors = [
    "Federico Bruzzone <federico.bruzzone.i@gmail.com>",
    "Andrea Longoni",
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/FedericoBruzzone/tdlib-rs"
repository = "https://github.com/FedericoBruzzone/tdlib-rs"
documentation = "https://docs.rs/tdlib-rs-gen"
keywords = [
    "tdlib",
    "telegram",
    "codegen",
    "api",
    "tdlib-rs"
]
description = "Rust code generator from TDLib's API definitions."

[dependencies]
tdlib-rs-parser = { path = "../tdlib-rs-parser", version = "1.0.0" }
