[package]
name = "tdlib-rs-gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tdlib-rs-gen"
keywords = [
    "tdlib",
    "telegram",
    "codegen",
    "api",
    "tdlib-rs"
]
description = "Rust code generator from TDLib's API definitions."

[dependencies]
tdlib-rs-parser = { workspace = true }
