[package]
name = "tdlib-rs"
version = "1.0.2"
authors = [
    "Federico Bruzzone <federico.bruzzone.i@gmail.com>",
    "Andrea Longoni",
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/FedericoBruzzone/tdlib-rs"
repository = "https://github.com/FedericoBruzzone/tdlib-rs"
documentation = "https://docs.rs/tdlib-rs"
keywords = ["telegram", "tdlib", "tdjson", "tdlib-rs", "telegram-api"]
description = "Rust wrapper around the Telegram Database Library."
readme = "README.md"

[package.metadata.docs.rs]
features = ["docs", "bots-only-api"]

[package.metadata.system-deps]
tdjson = "1.8.19"

[features]
# The default feature build the library using the local tdlib library
default = []
# This feature is used to enable the functions only available to the Telegram bots
bots-only-api = []
# This feature is used to build the documentation preventing linking to the tdjson library
docs = []
# This feature is used to build the library using pkg-config
pkg-config = ["dep:system-deps"]
# This feature is used to build the library using the tdlib library downloaded from github
download-tdlib = ["dep:reqwest", "dep:zip"]

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.2"

[build-dependencies]
tdlib-rs-gen = { path = "../tdlib-rs-gen", version = "1.0.2" }
tdlib-rs-parser = { path = "../tdlib-rs-parser", version = "1.0.2" }
system-deps = { version = "6", optional = true }
reqwest = { version = "0.12.4", features = ["blocking"], optional = true }
zip = { version = "2.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
