[package]
name = "tdlib-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tdlib-rs"
keywords = ["telegram", "tdlib", "tdjson", "tdlib-rs", "telegram-api"]
description = "Rust wrapper around the Telegram Database Library."
readme = "README.md"

[package.metadata.docs.rs]
features = ["docs", "bots-only-api"]

[package.metadata.system-deps]
tdjson = "1.8.61"

[features]
# The default feature build the library using the local tdlib library
default = []
# This feature is used to enable the functions only available to the Telegram bots
bots-only-api = []
# This feature is used to build the documentation preventing linking to the tdjson library
docs = []
# This feature is used to build the library using the tdlib library installed in the system
local-tdlib = []
# This feature is used to build the library using pkg-config
pkg-config = ["dep:system-deps"]
# This feature is used to build the library using the tdlib library downloaded from github
download-tdlib = ["dep:reqwest", "dep:zip"]

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
system-deps = { version = "7", optional = true }
reqwest = { version = "0.13", features = ["blocking"], optional = true }
zip = { version = "8", optional = true }
dirs = "6"

[build-dependencies]
tdlib-rs-gen = { workspace = true }
tdlib-rs-parser = { workspace = true }
system-deps = { version = "7", optional = true }
reqwest = { version = "0.13", features = ["blocking"], optional = true }
zip = { version = "8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
